Transparent site header fixes (dropdown overlap)

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -34,7 +34,7 @@
 
 .-has-transparent-site-header {
   .site-header {
-    background: rgba($black, .1);
+    background: rgba($black, .15);
     border-bottom-color: transparent;
     border-top-color: $color-gray-1;
 
