--- a/src/scss/layout/_site-nav-children.scss
+++ b/src/scss/layout/_site-nav-children.scss
@@ -86,7 +86,7 @@
     .site-nav__child-list {
       border-bottom: transparent;
       border-top: transparent;
-      background-color: rgba($black, .2);
+      background-color: rgba($black, .15);
     }
   
     // The link.
